--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@300;400;500;700;900&display=swap');
 
 :root {
-  --bg-sec-color: #caf0f8;
-  --bg-main-color: #0096c7;
-  --bg-third-color: #023e8a;
-  --btn-bg-color: #ffffff;
+  --bg-sec-color: #23bb9a;
+  --bg-main-color: #4767f8;
+  --bg-third-color: #cfd5db;
+  --btn-bg-color: #df5454;
   --winner-color: #000000;
 }
 
@@ -131,4 +131,17 @@ h3 {
   background-color: var(--winner-color);
   border: 1px solid var(--btn-bg-color);
   color: var(--btn-bg-color);
+}
+
+.high-content {
+  margin-top: -50px;
+}
+
+.hidden {
+  display: none;
+}
+
+ol {
+  display: flex;
+  justify-content: space-evenly;
 }
